add call to action section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Dump Days</title>
   </head>
-  <body></body>
+  <body>
+    <section class="call-to-action">
+      <h6>Konferencija za novu generaciju</h6>
+      <p>developera</p>
+      <div>
+        <p2> 14. i 15. svibnja 2022. </p2>
+        <svg>
+          <ellipse cx="4" cy="4" rx="4" ry="4" fill="white" />
+        </svg>
+        <p2>FESB</p2>
+      </div>
+      <div>
+        <button>PRIJAVI SE</button>
+      </div>
+    </section>
+  </body>
 </html>
