add dev-mark-diz-tech section

--- a/index.html
+++ b/index.html
@@ -21,5 +21,36 @@
         <button>PRIJAVI SE</button>
       </div>
     </section>
+    <section class="dev-mark-diz-tech">
+      <div class="dmdt-p-wrapper">
+        <p>Dev, Dizajn, Marketing & Tech</p>
+      </div>
+      <div class="big-numbers-info-wrapper">
+        <div class="bn-item">
+          <h1>4800+</h1>
+          <p>Posjetitelja</p>
+        </div>
+        <div class="bn-item">
+          <h1>60+</h1>
+          <p>Partnera</p>
+        </div>
+        <div class="bn-item">
+          <h1>70+</h1>
+          <p>Predavanja</p>
+        </div>
+        <div class="bn-item">
+          <h1>10+</h1>
+          <p>Radionica</p>
+        </div>
+        <div class="bn-item">
+          <h1>7+</h1>
+          <p>Panela</p>
+        </div>
+        <div class="bn-item">
+          <h1>180+</h1>
+          <p>Fly talks</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
