--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/visuals/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" />
     <title>Dump Days</title>
   </head>
   <body>
+    <header class="header">
+      <div class="header-logo">
+        <img src="./assets/visuals/dd-logo.png" alt="DUMP Days logo">
+      </div>
+      <nav class="header-nav">
+        <a href="conference">Konferencija</a>
+        <a href="content">Raspored</a>
+        <a href="speakers">Speakeri</a>
+        <a href="sponsors">Sponzori</a>
+        <a href="contact">Kontakt</a>
+        <div>
+          <button>PRIJAVI SE</button>
+        </div>
+      </nav>
+    </header>
+    <header class="header-mobile">
+      <div class="header-logo">
+          <img src="./assets/visuals/dd-mobile-logo.png" alt="DUMP Days logo">
+      </div>
+      <button class="hamburger">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+    </button>    
+  </header>
     <section class="call-to-action">
       <h6>Konferencija za novu generaciju</h6>
       <p>developera</p>
