added location section - dekstop version

--- a/index.html
+++ b/index.html
@@ -78,5 +78,18 @@
         </div>
       </div>
     </section>
+    <section class="location-section">
+      <div class="location-content">
+         <div class="location-header">
+            <p>Kako do nas</p>
+            <h3>FESB</h3>
+         </div>
+         <div class="location-copy">
+            <h2>Ista adresa, više sadržaja</h2>
+            <p>Posjeti sponzorske štandove u atriju i akvariju fakulteta i raspitaj se o poslovnim prilikama, a možeš osvojiti i super nagrade.</p>
+         </div>
+      </div>
+      <img src="./assets/visuals/pin.png" alt="pin" class="location-pin">
+  </section>
   </body>
 </html>
