added mobile version for location section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
       </div>
     </section>
     <section class="location-section">
+      <div class="location-map">
+        <div class="location-pin">
+          <img src="./assets/visuals/pin.png" alt="pin">
+        </div>
+      </div>
       <div class="location-content">
          <div class="location-header">
             <p>Kako do nas</p>
@@ -89,7 +94,6 @@
             <p>Posjeti sponzorske štandove u atriju i akvariju fakulteta i raspitaj se o poslovnim prilikama, a možeš osvojiti i super nagrade.</p>
          </div>
       </div>
-      <img src="./assets/visuals/pin.png" alt="pin" class="location-pin">
   </section>
   </body>
 </html>
