added livestream section - dekstop version

--- a/index.html
+++ b/index.html
@@ -94,7 +94,17 @@
             <p>Posjeti sponzorske štandove u atriju i akvariju fakulteta i raspitaj se o poslovnim prilikama, a možeš osvojiti i super nagrade.</p>
          </div>
       </div>
-  </section>
+    </section>
+    <section class="livestream-section">
+      <div class="livesteram-content">
+        <h2>Prati nas online</h2>
+        <p>Budi s nama iz udobnosti svog doma. Sva predavanja i panel rasprave možeš pratiti i online.</p>
+        <button>LIVE STREAM</button>
+      </div>
+      <div class="livestream-img">
+        <img src="./assets/visuals/Rectangle.png" alt="live stream image">
+      </div>
+    </section>
     <section class="fly-talks">
       <div class="ft-left">
         <h1>Fly Talks</h1>
