added livestream section - mobile version and intermediate text

--- a/index.html
+++ b/index.html
@@ -95,11 +95,15 @@
          </div>
       </div>
     </section>
+    <div class="intermediate-text">
+      <p>Ne možeš doći uživo?</p>
+    </div>
     <section class="livestream-section">
       <div class="livesteram-content">
         <h2>Prati nas online</h2>
         <p>Budi s nama iz udobnosti svog doma. Sva predavanja i panel rasprave možeš pratiti i online.</p>
-        <button>LIVE STREAM</button>
+        <button id="livestreamButtonDesktop">LIVE STREAM</button>
+        <button id="livestreamButtonMobile">YOU TUBE</button>
       </div>
       <div class="livestream-img">
         <img src="./assets/visuals/Rectangle.png" alt="live stream image">
