add time table html

--- a/index.html
+++ b/index.html
@@ -116,5 +116,268 @@
         </div>
       </div>
     </section>
+    <section class="time-table">
+      <h1 class="tt-header">Raspored</h1>
+      <div class="tt-dates">
+        <div class="tt-buttons-wrapper">
+          <button>14. petak</button>
+          <button>15. subota</button>
+        </div>
+      </div>
+      <div class="tt-activity-types">
+        <div class="tt-activities-wrapper">
+          <button>Predavanja</button>
+          <img src="assets/images/divider.png" />
+          <button>Radionice</button>
+          <img src="assets/images/divider.png" />
+          <button>Campfire talks</button>
+        </div>
+      </div>
+      <div class="all-cards">
+        <div class="tt-expanded-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+          </div>
+          <div class="ttec-right">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word">Live</tag>
+              </h3>
+              <img class="chevron-icon" src="assets/images/Chevron.png" />
+            </div>
+            <p>
+              Svaki software kojemu je svrha da autonomno upravlja vozilom nužno
+              mora imati mogućnost da raspoznaje objekte oko sebe i razumije što
+              se događa na cesti. Razvoj takvog sustava zahtijeva rješavanje
+              velikog broja složenih problema iz područja kompjuterskog vida. U
+              ovom predavanju ćemo govoriti o strategijama koje se koriste pri
+              rješavanju takvih problema. Poseban fokus će biti na metodama
+              dubokog učenja koje su pokazale impresivne rezultate u zadnjih
+              desetak godina.
+            </p>
+            <hr />
+            <div class="profile-card">
+              <div>
+                <img src="assets/images/ante.png" />
+                <div class="personal-info">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+              <img class="profico-image" src="assets/images/Profico.svg" />
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word2">Live</tag>
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word2">Live</tag>
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word2">Live</tag>
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word2">Live</tag>
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word2">Live</tag>
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word">Live</tag>
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
