Added copy for speakers section and prepared visuals

--- a/index.html
+++ b/index.html
@@ -109,6 +109,86 @@
         <img src="./assets/visuals/Rectangle.png" alt="live stream image">
       </div>
     </section>
+    <section class="speakers-section">
+      <div class="speakers-copy">
+        <h2>Digitalni inovatori pod istim krovom.</h2>
+        <p>Upoznaj renomirane stručnjake koji pokreću IT sutrašnjicu. Poslušaj njihova iskustva i savjete iz prve ruke.</p>
+      </div>
+      <div class="speakers-visuals">
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 1">
+           <h5>Miro Marasović</h5>
+           <p>Director of Engineering</p>
+           <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 1">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 2">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+           <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 2">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 3">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 3">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 4">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 4">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 5">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 5">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 6">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 6">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 7">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 7">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 8">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 8">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 9">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 9">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 10">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 10">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 11">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 11">
+        </div>
+        <div class="speaker-card">
+          <img src="./assets/images/speaker.png" alt="Speaker 12">
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 12">
+        </div>
+      </div>
+    </section>
     <section class="fly-talks">
       <div class="ft-left">
         <h1>Fly Talks</h1>
