add friends and partners

--- a/index.html
+++ b/index.html
@@ -81,18 +81,21 @@
     <section class="location-section">
       <div class="location-map">
         <div class="location-pin">
-          <img src="./assets/visuals/pin.png" alt="pin">
+          <img src="./assets/visuals/pin.png" alt="pin" />
         </div>
       </div>
       <div class="location-content">
-         <div class="location-header">
-            <p>Kako do nas</p>
-            <h3>FESB</h3>
-         </div>
-         <div class="location-copy">
-            <h2>Ista adresa, više sadržaja</h2>
-            <p>Posjeti sponzorske štandove u atriju i akvariju fakulteta i raspitaj se o poslovnim prilikama, a možeš osvojiti i super nagrade.</p>
-         </div>
+        <div class="location-header">
+          <p>Kako do nas</p>
+          <h3>FESB</h3>
+        </div>
+        <div class="location-copy">
+          <h2>Ista adresa, više sadržaja</h2>
+          <p>
+            Posjeti sponzorske štandove u atriju i akvariju fakulteta i raspitaj
+            se o poslovnim prilikama, a možeš osvojiti i super nagrade.
+          </p>
+        </div>
       </div>
     </section>
     <div class="intermediate-text">
@@ -101,12 +104,15 @@
     <section class="livestream-section">
       <div class="livesteram-content">
         <h2>Prati nas online</h2>
-        <p>Budi s nama iz udobnosti svog doma. Sva predavanja i panel rasprave možeš pratiti i online.</p>
+        <p>
+          Budi s nama iz udobnosti svog doma. Sva predavanja i panel rasprave
+          možeš pratiti i online.
+        </p>
         <button id="livestreamButtonDesktop">LIVE STREAM</button>
         <button id="livestreamButtonMobile">YOU TUBE</button>
       </div>
       <div class="livestream-img">
-        <img src="./assets/visuals/Rectangle.png" alt="live stream image">
+        <img src="./assets/visuals/Rectangle.png" alt="live stream image" />
       </div>
     </section>
     <section class="fly-talks">
@@ -409,6 +415,13 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="friends-and-partners">
+      <p>PRIJATELJI I PARTNERI</p>
+      <p>
+        Vjerujemo u jaka prijateljstva. Motivirani uspjesima na IT sceni,
+        zajedno oblikujemo budućnost digitalne generacije.
+      </p>
     </section>
   </body>
 </html>
