create golden sponsors section

--- a/index.html
+++ b/index.html
@@ -423,5 +423,59 @@
         zajedno oblikujemo budućnost digitalne generacije.
       </p>
     </section>
+    <section class="golden-sponsors">
+      <h1>Zlatni sponzori</h1>
+      <div class="logos-wrapper">
+        <img src="assets/images/Component 17.png" />
+        <img src="assets/images/Component 18.png" />
+        <img src="assets/images/Profico.svg" />
+      </div>
+      <div class="gs-img-txts">
+        <div class="gs-img-txt">
+          <img class="image3" src="assets/images/image 3.png" />
+          <p>
+            <span>Netmedia</span>
+            Kroz višegodišnju suradnju s najboljim organizacijama na svijetu kao
+            što su Harvard, MIT, Johnson & Johnson i Fitch Ratings,
+            ExtensionEngine je prepoznat kao vodeći pružatelj usluga u području
+            online učenja. Želja im je pomoći obrazovnim institucijama i
+            tvrtkama stvoriti nove, revolucionarne načine učenja jer je klasično
+            učenje često dosadno, zastarjelo i monotono. Sve to rade u opuštenoj
+            atmosferi iz njihovih ureda u Bostonu, New Yorku, Splitu i Zagrebu.
+          </p>
+        </div>
+        <hr />
+
+        <div class="gs-img-txt">
+          <p>
+            <span>Typeqast</span>
+            Kroz višegodišnju suradnju s najboljim organizacijama na svijetu kao
+            što su Harvard, MIT, Johnson & Johnson i Fitch Ratings,
+            ExtensionEngine je prepoznat kao vodeći pružatelj usluga u području
+            online učenja. Želja im je pomoći obrazovnim institucijama i
+            tvrtkama stvoriti nove, revolucionarne načine učenja jer je klasično
+            učenje često dosadno, zastarjelo i monotono. Sve to rade u opuštenoj
+            atmosferi iz njihovih ureda u Bostonu, New Yorku, Splitu i Zagrebu.
+          </p>
+          <img class="image3" src="assets/images/image 3.png" />
+        </div>
+        <hr />
+
+        <div class="gs-img-txt">
+          <img class="image3" src="assets/images/image 3.png" />
+
+          <p>
+            <span>Profico</span>
+            Kroz višegodišnju suradnju s najboljim organizacijama na svijetu kao
+            što su Harvard, MIT, Johnson & Johnson i Fitch Ratings,
+            ExtensionEngine je prepoznat kao vodeći pružatelj usluga u području
+            online učenja. Želja im je pomoći obrazovnim institucijama i
+            tvrtkama stvoriti nove, revolucionarne načine učenja jer je klasično
+            učenje često dosadno, zastarjelo i monotono. Sve to rade u opuštenoj
+            atmosferi iz njihovih ureda u Bostonu, New Yorku, Splitu i Zagrebu.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
