--- a/index.html
+++ b/index.html
@@ -115,77 +115,107 @@
         <p>Upoznaj renomirane stručnjake koji pokreću IT sutrašnjicu. Poslušaj njihova iskustva i savjete iz prve ruke.</p>
       </div>
       <div class="speakers-visuals">
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 1">
-           <h5>Miro Marasović</h5>
-           <p>Director of Engineering</p>
-           <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 1">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 2">
+        <div class="speaker-column">
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 1">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-           <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 2">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 3">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 1">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 2">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 3">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 4">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 2">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 3">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 4">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 5">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 3">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 4">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 5">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 4">
+          </div>
         </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 6">
+        <div class="speaker-column">
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 5">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 6">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 7">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 5">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 6">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 7">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 8">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 6">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 7">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 8">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 9">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 7">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 8">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 9">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 8">
+          </div>
         </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 10">
+        <div class="speaker-column">
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 9">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 10">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 11">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 9">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 10">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 11">
-        </div>
-        <div class="speaker-card">
-          <img src="./assets/images/speaker.png" alt="Speaker 12">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 10">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 11">
+            </div>
             <h5>Miro Marasović</h5>
             <p>Director of Engineering</p>
-         <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 12">
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 11">
+          </div>
+          <div class="speaker-card">
+            <div class="speaker-img-wrapper">
+              <img src="./assets/images/speaker.png" alt="Speaker 12">
+            </div>
+            <h5>Miro Marasović</h5>
+            <p>Director of Engineering</p>
+            <img src="./assets/visuals/speakers-logo.svg" alt="Speaker logo 12">
+          </div>
         </div>
       </div>
     </section>
