Added sponsors and media dekstop section

--- a/index.html
+++ b/index.html
@@ -345,26 +345,6 @@
         <img class="ft-image3" src="assets/images/ft3.png" />
       </div>
     </section>
-    <section class="location-section">
-      <div class="location-map">
-        <div class="location-pin">
-          <img src="./assets/visuals/pin.png" alt="pin" />
-        </div>
-      </div>
-      <div class="location-content">
-        <div class="location-header">
-          <p>Kako do nas</p>
-          <h3>FESB</h3>
-        </div>
-        <div class="location-copy">
-          <h2>Ista adresa, više sadržaja</h2>
-          <p>
-            Posjeti sponzorske štandove u atriju i akvariju fakulteta i raspitaj
-            se o poslovnim prilikama, a možeš osvojiti i super nagrade.
-          </p>
-        </div>
-      </div>
-    </section>
     <section class="time-table">
       <h1 class="tt-header">Raspored</h1>
       <div class="tt-dates">
@@ -688,6 +668,74 @@
           </p>
         </div>
       </div>
+    </section>
+    <section class="silver-sponsors">
+      <div class="other-sponsor-content">
+      <h2>Srebrni sponzori<h2>
+      <div class="osc-row">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 1">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 2">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 3">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 4">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 5">
+      </div>
+      <div class="osc-row">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 6">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 7">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 8">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 9">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 10">
+      </div>
+    </div>
+    </section>
+    <section class="bronze-sponsors">
+    <div class="other-sponsor-content">
+      <h2>Brončani sponzori</h2>
+      <div class="osc-row">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="bronze sponsor 1">
+        <img src="./assets/visuals/🖥 Desktop.svg" alt="bronze sponsor 2">
+      </div>
+    </div>
+    </section>
+    <section class="org-partners">
+    <div class="other-sponsor-content">
+      <h2>Organizacijski partneri</h2>
+      <div class="osc-row">
+        <img src="./assets/visuals/grad-st.svg" alt="partner 1">
+        <img src="./assets/visuals/grad-st.svg" alt="partner 2">
+        <img src="./assets/visuals/grad-st.svg" alt="partner 3">
+      </div>
+    </div>
+    </section>
+    <section class="award-sponsor">
+    <div class="other-sponsor-content">
+      <h2>Sponzor nagradne igre</h2>
+      <div class="osc-row">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 1">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 2">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 3">
+      </div>
+    </div>
+    </section>
+    <section class="media">
+    <div class="other-sponsor-content">
+      <h2>Medijski pokrovitelj</h2>
+      <div class="osc-row">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 1">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 2">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 3">
+      </div>
+    </div>
+    </section>
+    <section class="friends">
+    <div class="other-sponsor-content">
+      <h2>Prijatelj</h2>
+      <div class="osc-row">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 1">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 2">
+        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 3">
+      </div>
+    </div>
     </section>
     <section class="job-market">
       <div class="jm-header">
