Added other sponsors - mobile version

--- a/index.html
+++ b/index.html
@@ -671,29 +671,31 @@
     </section>
     <section class="silver-sponsors">
       <div class="other-sponsor-content">
-      <h2>Srebrni sponzori<h2>
-      <div class="osc-row">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 1">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 2">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 3">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 4">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 5">
+        <h2>Srebrni sponzori<h2>
+        <div class="silver-mobile-version">
+          <div class="osc-row">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 1">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 2">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 3">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 4">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 5">
+          </div>
+          <div class="osc-row">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 6">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 7">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 8">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 9">
+            <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 10">
+          </div>
+        </div>  
       </div>
-      <div class="osc-row">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 6">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 7">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 8">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 9">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="silver sponsor 10">
-      </div>
-    </div>
     </section>
     <section class="bronze-sponsors">
     <div class="other-sponsor-content">
       <h2>Brončani sponzori</h2>
       <div class="osc-row">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="bronze sponsor 1">
-        <img src="./assets/visuals/🖥 Desktop.svg" alt="bronze sponsor 2">
+        <img src="./assets/visuals/bronze-sponsor.svg" alt="bronze sponsor 1">
+        <img src="./assets/visuals/bronze-sponsor.svg" alt="bronze sponsor 2">
       </div>
     </div>
     </section>
@@ -712,8 +714,6 @@
       <h2>Sponzor nagradne igre</h2>
       <div class="osc-row">
         <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 1">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 2">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 3">
       </div>
     </div>
     </section>
@@ -721,9 +721,10 @@
     <div class="other-sponsor-content">
       <h2>Medijski pokrovitelj</h2>
       <div class="osc-row">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 1">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 2">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 3">
+        <img src="./assets/visuals/media.svg" alt="mediji 1">
+        <img src="./assets/visuals/media.svg" alt="mediji 2">
+        <img src="./assets/visuals/media.svg" alt="mediji 3">
+        <img src="./assets/visuals/media.svg" alt="mediji 4">
       </div>
     </div>
     </section>
@@ -731,9 +732,8 @@
     <div class="other-sponsor-content">
       <h2>Prijatelj</h2>
       <div class="osc-row">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 1">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 2">
-        <img src="./assets/visuals/Futura it logo.svg" alt="nagradni sponzor 3">
+        <img src="./assets/visuals/friends.svg" alt="prijatelj 1">
+        <img src="./assets/visuals/friends.svg" alt="prijatelj 2">
       </div>
     </div>
     </section>
