add gallery html

--- a/index.html
+++ b/index.html
@@ -756,5 +756,209 @@
         <img src="assets/images/Frame 218.png" />
       </div>
     </section>
+    <section class="gallery">
+      <header class="gallery-header">
+        <h2 class="g-header">DUMP Days kroz godine</h2>
+        <span class="header-span"
+          >Pogledaj kako smo se družili prošlih godina</span
+        >
+      </header>
+      <div class="galerry-wrapper">
+        <div class="image-container1">
+          <img
+            class="png1"
+            src="assets/images/GalleryImages/1.png"
+            alt="Image 1"
+          />
+          <img
+            class="png2"
+            src="assets/images/GalleryImages/2.png"
+            alt="Image 1"
+          />
+          <div class="image-wrapper">
+            <img
+              class="png3"
+              src="assets/images/GalleryImages/3.png"
+              alt="Image 1"
+            />
+          </div>
+        </div>
+        <div class="image-container2">
+          <img
+            src="assets/images/GalleryImages/4.png"
+            alt="Image 4"
+            class="png4"
+          />
+          <img
+            src="assets/images/GalleryImages/5.png"
+            alt="Image 5"
+            class="png5"
+          />
+          <img
+            src="assets/images/GalleryImages/6.png"
+            alt="Image 6"
+            class="png6"
+          />
+        </div>
+        <div class="image-container3">
+          <img
+            src="assets/images/GalleryImages/7.png"
+            alt="Image 7"
+            class="png7"
+          />
+          <img
+            src="assets/images/GalleryImages/8.png"
+            alt="Image 8"
+            class="png8"
+          />
+          <img
+            src="assets/images/GalleryImages/9.png"
+            alt="Image 9"
+            class="png9"
+          />
+        </div>
+        <div class="image-container4">
+          <img
+            src="assets/images/GalleryImages/10.png"
+            alt="Image 10"
+            class="png10"
+          />
+          <img
+            src="assets/images/GalleryImages/11.png"
+            alt="Image 11"
+            class="png11"
+          />
+        </div>
+        <div class="image-container5">
+          <img
+            src="assets/images/GalleryImages/12.png"
+            alt="Image 12"
+            class="png12"
+          />
+          <img
+            src="assets/images/GalleryImages/13.png"
+            alt="Image 13"
+            class="png13"
+          />
+        </div>
+        <div class="image-container6">
+          <img
+            src="assets/images/GalleryImages/14.png"
+            alt="Image 14"
+            class="png14"
+          />
+          <img
+            src="assets/images/GalleryImages/15.png"
+            alt="Image 15"
+            class="png15"
+          />
+        </div>
+        <div class="image-container7">
+          <img
+            src="assets/images/GalleryImages/16.png"
+            alt="Image 16"
+            class="png16"
+          />
+        </div>
+      </div>
+      <div class="galerry-wrapper0">
+        <div class="image-container10">
+          <img
+            class="png10"
+            src="assets/images/GalleryImages/101.png"
+            alt="Image 1"
+          />
+          <img
+            class="png20"
+            src="assets/images/GalleryImages/102.png"
+            alt="Image 1"
+          />
+          <div class="image-wrapper">
+            <img
+              class="png30"
+              src="assets/images/GalleryImages/103.png"
+              alt="Image 1"
+            />
+          </div>
+        </div>
+        <div class="image-container20">
+          <img
+            src="assets/images/GalleryImages/104.png"
+            alt="Image 4"
+            class="png4"
+          />
+          <img
+            src="assets/images/GalleryImages/105.png"
+            alt="Image 5"
+            class="png50"
+          />
+          <img
+            src="assets/images/GalleryImages/106.png"
+            alt="Image 6"
+            class="png60"
+          />
+        </div>
+
+        <div class="image-container30">
+          <img
+            src="assets/images/GalleryImages/107.png"
+            alt="Image 7"
+            class="png70"
+          />
+          <img
+            src="assets/images/GalleryImages/108.png"
+            alt="Image 8"
+            class="png80"
+          />
+        </div>
+        <div class="image-container40">
+          <img
+            src="assets/images/GalleryImages/109.png"
+            alt="Image 10"
+            class="png100"
+          />
+          <img
+            src="assets/images/GalleryImages/110.png"
+            alt="Image 11"
+            class="png110"
+          />
+        </div>
+
+        <div class="image-container50">
+          <img
+            src="assets/images/GalleryImages/111.png"
+            alt="Image 12"
+            class="png120"
+          />
+          <img
+            src="assets/images/GalleryImages/112.png"
+            alt="Image 13"
+            class="png130"
+          />
+          <img
+            src="assets/images/GalleryImages/113.png"
+            alt="Image 13"
+            class="png130"
+          />
+        </div>
+        <div class="image-container60">
+          <img
+            src="assets/images/GalleryImages/114.png"
+            alt="Image 14"
+            class="png140"
+          />
+          <img
+            src="assets/images/GalleryImages/115.png"
+            alt="Image 15"
+            class="png150"
+          />
+          <img
+            src="assets/images/GalleryImages/116.png"
+            alt="Image 15"
+            class="png150"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
