Added testimonial section - dekstop version

--- a/index.html
+++ b/index.html
@@ -1219,6 +1219,7 @@
           />
         </div>
       </div>
+    </section>
       <section class="app-section">
         <div class="app-section-header">
           Aplikacija
@@ -1252,6 +1253,23 @@
               <img src="./assets/visuals/app-visual.png" alt="DUMP Days app">
             </div>
           </div>
+      </section>
+      <section class="testimonial-section">
+        <div class="testimonial-visual">
+          <img src="./assets/visuals/speaker-testimonial.png" alt="Luka Abrus">
+        </div>
+        <div class="testimonial-copy">
+          <h3>Luka Abrus</h3>
+          <p>DUMP Days su nedvojbeno najbolja studentska konferencija u Hrvatskoj,
+            a i jedna od boljih tehnoloških konferencija na kojima sam bio u regiji
+            i šire. Kvalitetan program i izuzetno profesionalni odnos organizatora najava
+            je kako će biti vrhunski profesionalci koji su tijekom studija ne samo pomogli
+            svojim kolegama upoznati buduće poslodavce u IT-u, nego i sebi otvorili ta 
+            vrata! DUMP Daysi će mi uvijek ostati u sjećanju kao jedan od najdražih angažmana
+            kao predavača!
+          </p>
+          <img src="/assets/visuals/testimonial-logo.svg" alt="FIVE">
+        </div>
       </section>
   </body>
 </html>
